2007-10-07  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-buildpackage.pl: Warn if run as root and $rootcommand
	has been specified. Error if run as non-root and $rootcommand is not
	found.

2007-10-07  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-buildpackage.pl (usage): Remove details about running
	fakeroot only if it's available.

2007-10-07  Frank Lichtenheld  <djpig@debian.org>
	    Marcel Toele  <mtoele@kern.nl>

	* scripts/dpkg-source.pl (handleformat): Include
	a trailing HT character in the diff labels if
	the filename contains spaces. Apparantly this is
	standard but undocumented diff behaviour.

2007-09-29  Frank Lichtenheld  <djpig@debian.org>

	* scripts/dpkg-buildpackage.pl: Call checkversion()
	on version extracted from changelog. Since other
	program we call later will do the same there is
	really no reason not to fail early.

	* scripts/dpkg-buildpackage.pl (testcommand):
	Make the check more sensible. Instead of testing
	/usr/bin/$cmd, test `which $cmd`.

	* scripts/dpkg-buildpackage.pl (signfile): Call
	gpg with --utf8-strings since otherwise the key
	lookup fails with non-ASCII UTF8-encoded names.
	Since Debian changelogs should be UTF8 encoded,
	this is probably the more sane default. This
	will probably break if one uses a non-UTF8 locale
	and tries to give a uid on the commandline that
	contains non-ASCII chars. I think we can live with
	that.

2007-09-28  Frank Lichtenheld  <djpig@debian.org>

	* scripts/dpkg-buildpackage.pl (withecho): Remove
	empty strings at the begin of the command array.
	These can be caused by e.g. an emtpy $rootcommando.
	It is easiest to filter them out here.

2007-09-24  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-buildpackage.pl (signfile): Do not use absolute path
	for 'rm'.

2007-09-24  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-buildpackage.pl (usage): Fix typo
	s/dpkg-genchangs/dpkg-genchanges/.

2007-09-24  Guillem Jover  <guillem@debian.org>
