@@ -1,3 +1,12 @@
+2007-10-08  Frank Lichtenheld  <djpig@debian.org>,
+            Guillem Jover  <guillem@debian.org>
+
+	* scripts/controllib.pl (debarch_is): Check if $alias is equal to
+	$real or 'any' before mapping them to debtriplets.
+	(debarch_to_debtriplet): Do not special case 'any' nor 'all'.
+	(debarch_eq): Check if $a and $b are equal before mapping them to
+	debtriplets.
+
 2007-10-07  Guillem Jover  <guillem@debian.org>
 
 	* scripts/dpkg-buildpackage.pl: Warn if run as root and $rootcommand
